수업 보충 내용/MVC

--- a/READ ME/20230320.md
+++ b/READ ME/20230320.md
@@ -110,3 +110,7 @@ Spring MVC의 주요 구성요소는 Model, View, Controller 외에도 다양한
 - ModelAndView: Controller에 의해 반환된 Model과 View가 Wrapping된 객체
 - ViewResolver: ModelAndView를 처리하여 View그리기
 
+
+![image](https://user-images.githubusercontent.com/122864238/228496094-d9bf73a2-2fae-4b1f-9793-ec5ec01ca113.png)
+
+![image](https://user-images.githubusercontent.com/122864238/228495974-6b73be65-b688-435d-a5ba-f3db56f441bc.png)
