수업 보충 내용/Redirect & Forward, 세션 & 쿠키

--- a/READ ME/20230406.md
+++ b/READ ME/20230406.md
@@ -125,10 +125,10 @@ Response Header에 Set-Cookie속성을 사용하면 클라이언트에 쿠키를
 바로 통신가능한 비동기 통신이다.            
 ->통신을 하지만 새로 페이지가 로드되는 방식이 아닌 ajax 요청을 한 데이터만 가져와서 
 그 부분에 적용하는 방식이다.
-- type : "GET" OR "POST" 두가지를 사용할 수 있습니다.
-- url : "/test/home" 통신을 원하는 url를 적어주시고요.
-- dataType : 데이터 타입을 어떻게 넘길 거냐는 건데 "json"타입으로 넘김다는 선언 입니다.
-- contentType : 지금 공부중인데 보이는거와 같이 contentType을 어떻게 설정 할거냐라는 겁니다.
-- data : 통신할 데이터를 넣는 부분입니다.
-- success : 정상적으로 통신 했을때 함수를 하나 만들어 성공 처리를 합니다.
-- error : 결과가 정상적이지 않을때 함수를 하나 만들어 처리를 하는 곳입니다.
+- type : "GET" OR "POST" 두가지를 사용할 수 있다.
+- url : "/test/home" 통신을 원하는 url를 적어준다
+- dataType : 넘길 데이터 타입
+- contentType : 설정할 contentType
+- data : 통신할 데이터를 넣는 부분
+- success : 정상적으로 통신 했을때 함수를 하나 만들어 성공 처리를 한다.
+- error : 결과가 정상적이지 않을때 함수를 하나 만들어 처리를 한다.
