MyBatis 보충해야함

--- a/READ ME/20230428.md
+++ b/READ ME/20230428.md
@@ -8,6 +8,7 @@
 ## root-context       
 ![image](https://user-images.githubusercontent.com/122864238/235030709-0740846e-db28-4ce4-a942-73d7a0f708c0.png)
 
+![image](https://user-images.githubusercontent.com/122864238/235383879-c243da1b-dd5f-4ef2-967e-c3c371813a2d.png)
 
 ## DTO        
 DTO 부분에 테이블 속성들을 변수로 지정을 해준다.           
